--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
     <div class="background-blur"></div>
     <div class="player">
-    <h2>Ceylon Live FM Radio</h2>
+    <img src="assets/logo.png" class="logo"> 
+    
+    
     <button onclick="play('https://mbc.thestreamtech.com:8087/index.html', 'Sirasa FM')">
         <img src="assets/logos/sirasa_fm.png" alt="Sirasa FM Logo" class="ch-logo"></br>
         Sirasa FM
